watch previous commit